--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
     }
 
     #mensajeExito {
-      display: none;
+      display: none; /* ✅ Esto evita que el modal aparezca al inicio */
       position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       background-color: rgba(0,0,0,0.6);
       z-index: 9999;
       justify-content: center;
@@ -76,77 +78,5 @@
     <label for="direccion">Dirección:</label>
     <input type="text" id="direccion" name="direccion">
 
-    <!-- Campo foto desactivado temporalmente -->
-    <!--
-    <label for="foto">Foto:</label>
-    <input type="file" id="foto" name="foto" accept="image/*" capture="environment">
-    -->
-
     <label for="observaciones">Observaciones:</label>
-    <textarea id="observaciones" name="observaciones"></textarea>
-
-    <button type="submit" id="btnEnviar">Enviar</button>
-  </form>
-
-  <!-- MENSAJE EMERGENTE -->
-  <div id="mensajeExito">
-    <div class="contenido">
-      <p>✅ Registro exitoso</p>
-      <button onclick="cerrarMensaje()">Aceptar</button>
-    </div>
-  </div>
-
-  <script>
-    const URL_SCRIPT = "https://script.google.com/macros/s/AKfycby7LbY9b1iIp5ASKJlP0R-8QFvtHRT_51zA7OpSa6DAnnlo9Bno-4xPw3kpv2N9VbWd/exec";
-
-    document.getElementById("formulario").addEventListener("submit", function(e) {
-      e.preventDefault();
-
-      const form = document.getElementById("formulario");
-      const boton = document.getElementById("btnEnviar");
-      const formData = new FormData(form);
-
-      // Mostrar los datos en consola para verificar
-      for (let pair of formData.entries()) {
-        console.log(pair[0] + ': ' + pair[1]);
-      }
-
-      boton.disabled = true;
-      boton.textContent = "Enviando...";
-
-      fetch(URL_SCRIPT, {
-        method: "POST",
-        body: formData
-      })
-      .then(response => response.text())
-      .then(data => {
-        console.log("Respuesta del servidor:", data);
-        document.getElementById("mensajeExito").style.display = "flex";
-      })
-      .catch(error => {
-        alert("❌ Error al enviar. Intenta de nuevo.");
-        console.error("Error:", error);
-      })
-      .finally(() => {
-        boton.disabled = false;
-        boton.textContent = "Enviar";
-      });
-    });
-
-    function cerrarMensaje() {
-      document.getElementById("mensajeExito").style.display = "none";
-      document.getElementById("formulario").reset();
-    }
-
-    // Llenar el campo ID desde la URL
-    window.addEventListener("DOMContentLoaded", function() {
-      const params = new URLSearchParams(window.location.search);
-      const id = params.get("id");
-      if (id) {
-        document.getElementById("id").value = id;
-      }
-    });
-  </script>
-
-</body>
-</html>
+    <textarea id="observaciones" na
