--- a/index.html
+++ b/index.html
@@ -1,44 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Formulario de Registro</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
     }
-
     label {
       display: block;
       margin-top: 10px;
     }
-
     input, textarea {
       width: 100%;
       padding: 8px;
       margin-top: 5px;
     }
-
     button {
       margin-top: 15px;
       padding: 10px 20px;
       font-size: 16px;
     }
-
     #mensajeExito {
-      display: none; /* ✅ Esto evita que el modal aparezca al inicio */
+      display: none; /* Oculto al cargar */
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       background-color: rgba(0,0,0,0.6);
       z-index: 9999;
       justify-content: center;
       align-items: center;
+      display: flex; /* Importante: display flex para centrar cuando se muestra */
     }
-
     #mensajeExito .contenido {
       background-color: white;
       padding: 25px;
@@ -46,12 +40,10 @@
       text-align: center;
       box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
-
     #mensajeExito .contenido p {
       font-size: 18px;
       margin-bottom: 20px;
     }
-
     #mensajeExito .contenido button {
       padding: 10px 25px;
       font-size: 16px;
@@ -64,19 +56,97 @@
   <h2>Formulario de Registro</h2>
   <form id="formulario">
     <label for="id">ID:</label>
-    <input type="text" name="id" id="id" readonly>
+    <input type="text" name="id" id="id" readonly />
 
     <label for="nombre">Nombre:</label>
-    <input type="text" id="nombre" name="nombre" required>
+    <input type="text" id="nombre" name="nombre" required />
 
     <label for="ciudad">Ciudad:</label>
-    <input type="text" id="ciudad" name="ciudad">
+    <input type="text" id="ciudad" name="ciudad" />
 
     <label for="barrio">Barrio:</label>
-    <input type="text" id="barrio" name="barrio">
+    <input type="text" id="barrio" name="barrio" />
 
     <label for="direccion">Dirección:</label>
-    <input type="text" id="direccion" name="direccion">
+    <input type="text" id="direccion" name="direccion" />
+
+    <label for="foto">Foto:</label>
+    <input type="file" id="foto" name="foto" accept="image/*" capture="environment" />
 
     <label for="observaciones">Observaciones:</label>
-    <textarea id="observaciones" na
+    <textarea id="observaciones" name="observaciones"></textarea>
+
+    <button type="submit" id="btnEnviar">Enviar</button>
+  </form>
+
+  <!-- MENSAJE EMERGENTE -->
+  <div id="mensajeExito">
+    <div class="contenido">
+      <p>✅ Registro exitoso</p>
+      <button onclick="cerrarMensaje()">Aceptar</button>
+    </div>
+  </div>
+
+  <script>
+    const URL_SCRIPT = "https://script.google.com/macros/s/AKfycby7LbY9b1iIp5ASKJlP0R-8QFvtHRT_51zA7OpSa6DAnnlo9Bno-4xPw3kpv2N9VbWd/exec";
+
+    window.addEventListener("DOMContentLoaded", () => {
+      const params = new URLSearchParams(window.location.search);
+      const id = params.get("id");
+      if (id) {
+        const campoId = document.getElementById("id");
+        if (campoId) {
+          campoId.value = id;
+          campoId.readOnly = true; // para bloquear edición manual
+        }
+      }
+    });
+
+    document.getElementById("formulario").addEventListener("submit", function(e) {
+      e.preventDefault();
+
+      const form = document.getElementById("formulario");
+      const boton = document.getElementById("btnEnviar");
+      const formData = new FormData(form);
+
+      boton.disabled = true;
+      boton.textContent = "Enviando...";
+
+      fetch(URL_SCRIPT, {
+        method: "POST",
+        body: formData
+      })
+      .then(response => response.text())
+      .then(data => {
+        // Mostrar modal
+        document.getElementById("mensajeExito").style.display = "flex";
+      })
+      .catch(error => {
+        alert("❌ Error al enviar. Intenta de nuevo.");
+        console.error("Error:", error);
+      })
+      .finally(() => {
+        boton.disabled = false;
+        boton.textContent = "Enviar";
+      });
+    });
+
+    function cerrarMensaje() {
+      document.getElementById("mensajeExito").style.display = "none";
+      document.getElementById("formulario").reset();
+
+      // Después de resetear, vuelve a poner el ID si viene en URL
+      const params = new URLSearchParams(window.location.search);
+      const id = params.get("id");
+      if (id) {
+        const campoId = document.getElementById("id");
+        if (campoId) {
+          campoId.value = id;
+          campoId.readOnly = true;
+        }
+      }
+    }
+  </script>
+
+</body>
+</html>
