--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
       font-family: Arial, sans-serif;
       padding: 20px;
     }
+
     label {
       display: block;
       margin-top: 10px;
     }
+
     input, textarea {
       width: 100%;
       padding: 8px;
       margin-top: 5px;
     }
+
     button {
       margin-top: 15px;
       padding: 10px 20px;
       font-size: 16px;
     }
+
     #mensajeExito {
-      display: none; /* Oculto al cargar */
+      display: none; /* Oculto por defecto */
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
@@ -31,8 +35,8 @@
       z-index: 9999;
       justify-content: center;
       align-items: center;
-      
     }
+
     #mensajeExito .contenido {
       background-color: white;
       padding: 25px;
@@ -40,10 +44,12 @@
       text-align: center;
       box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
+
     #mensajeExito .contenido p {
       font-size: 18px;
       margin-bottom: 20px;
     }
+
     #mensajeExito .contenido button {
       padding: 10px 25px;
       font-size: 16px;
@@ -79,7 +85,7 @@
     <button type="submit" id="btnEnviar">Enviar</button>
   </form>
 
-  <!-- MENSAJE EMERGENTE -->
+  <!-- MODAL DE ÉXITO -->
   <div id="mensajeExito">
     <div class="contenido">
       <p>✅ Registro exitoso</p>
@@ -90,6 +96,7 @@
   <script>
     const URL_SCRIPT = "https://script.google.com/macros/s/AKfycby7LbY9b1iIp5ASKJlP0R-8QFvtHRT_51zA7OpSa6DAnnlo9Bno-4xPw3kpv2N9VbWd/exec";
 
+    // Cargar ID desde URL y mostrar modal si corresponde
     window.addEventListener("DOMContentLoaded", () => {
       const params = new URLSearchParams(window.location.search);
       const id = params.get("id");
@@ -97,11 +104,18 @@
         const campoId = document.getElementById("id");
         if (campoId) {
           campoId.value = id;
-          campoId.readOnly = true; // para bloquear edición manual
+          campoId.readOnly = true;
         }
+      }
+
+      // Solo mostrar modal si venimos de un envío exitoso
+      if (sessionStorage.getItem("registroExitoso") === "1") {
+        document.getElementById("mensajeExito").style.display = "flex";
+        sessionStorage.removeItem("registroExitoso");
       }
     });
 
+    // Envío del formulario
     document.getElementById("formulario").addEventListener("submit", function(e) {
       e.preventDefault();
 
@@ -118,8 +132,11 @@
       })
       .then(response => response.text())
       .then(data => {
-        // Mostrar modal
-        document.getElementById("mensajeExito").style.display = "flex";
+        // Marcar que se envió correctamente
+        sessionStorage.setItem("registroExitoso", "1");
+
+        // Recargar la página para evitar reenvío doble
+        location.reload();
       })
       .catch(error => {
         alert("❌ Error al enviar. Intenta de nuevo.");
@@ -135,7 +152,7 @@
       document.getElementById("mensajeExito").style.display = "none";
       document.getElementById("formulario").reset();
 
-      // Después de resetear, vuelve a poner el ID si viene en URL
+      // Rellenar de nuevo el ID después de reset
       const params = new URLSearchParams(window.location.search);
       const id = params.get("id");
       if (id) {
